--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,54 @@
   height: auto; 
   margin: 0 auto; 
 }
+
+.containerCardItenDatil {
+  -webkit-animation-name: zoomIn;
+  animation-name: zoomIn;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  }
+  @-webkit-keyframes zoomIn {
+  0% {
+  opacity: 0;
+  -webkit-transform: scale3d(.3, .3, .3);
+  transform: scale3d(.3, .3, .3);
+  }
+  50% {
+  opacity: 1;
+  }
+  }
+  @keyframes zoomIn {
+  0% {
+  opacity: 0;
+  -webkit-transform: scale3d(.3, .3, .3);
+  transform: scale3d(.3, .3, .3);
+  }
+  50% {
+  opacity: 1;
+  }
+  } 
+
+  .divCardItenDatil {
+    -webkit-box-shadow: 5px 9px 24px 6px rgba(0,0,0,0.47); 
+    box-shadow: 5px 9px 24px 6px rgba(0,0,0,0.47);
+  }
+
+  .CardItem {
+    -webkit-box-shadow: 5px 9px 24px 6px rgba(0,0,0,0.47); 
+    box-shadow: 5px 9px 24px 6px rgba(0,0,0,0.47);
+    width: "15rem"
+  }
+
+  .itemNavbar{
+    text-decoration: none;
+    color: black;
+  }
+  
+  .itemNavbar:hover{
+    color:forestgreen;
+  }
+  
+ 
